# SE4Sci-Project

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
src/DiffEqnSolver/: __init__.py
src/diffeqnsolver/: __init__.py  eulersolver.py  solver.py  taylorsolver.py
src/diffeqnsolver/.ipynb_checkpoints/: eulersolver-checkpoint.py
tests/: test_infinities.py  test_multiterm.py  test_one.py  test_simple.py  test_two.py
tests/.ipynb_checkpoints/: test_infinities-checkpoint.py  test_multiterm-checkpoint.py  test_one-checkpoint.py  test_simple-checkpoint.py
