[project]
name = "diffeqnsolver"
version = "0.1.0"
requires-python = ">=3.9"

[dependency-groups]
test = ["pytest"]
dev = [
  "pre-commit",
  { include-group = "test" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "F", "W"]
extend-select = [
  "B",
  "I",
  "RUF",
  "UP",
  "ARG",
]
