[project]
name = "diffeqnsolver"
version = "0.1.0"
requires-python = ">=3.9"

[dependency-groups]
test = ["pytest"]
dev = [
  "pre-commit",
  { include-group = "test" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "INFO"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "W"]
extend-select = [
  "B",
  "I",
  "RUF",
  "UP",
  "ARG",
]
